--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "massive-rts",
   "version": "0.1.0",
   "description": "A browser-based RTS game with massively multiplayer capabilities",
-  "main": "index.js",
+  "main": "server/index.js",
   "scripts": {
-    "start": "http-server -c-1 -p 8080",
+    "start": "node server/index.js",
+    "dev": "nodemon server/index.js",
+    "client": "http-server -c-1 -p 8080",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -17,7 +19,13 @@
   ],
   "author": "",
   "license": "MIT",
+  "dependencies": {
+    "express": "^4.18.2",
+    "socket.io": "^4.7.2",
+    "uuid": "^9.0.1"
+  },
   "devDependencies": {
-    "http-server": "^14.1.1"
+    "http-server": "^14.1.1",
+    "nodemon": "^3.0.1"
   }
 } 
