--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "canvas": "^3.1.0",
     "express": "^4.18.2",
     "socket.io": "^4.7.2",
     "uuid": "^9.0.1"
@@ -28,4 +29,4 @@
     "http-server": "^14.1.1",
     "nodemon": "^3.0.1"
   }
-} 
+}
