--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "A browser-based RTS game with massively multiplayer capabilities",
   "main": "server/index.js",
   "scripts": {
-    "start": "node server/index.js",
-    "dev": "nodemon server/index.js",
+    "start": "node dist/server.bundle.js",
+    "dev": "nodemon dist/server.bundle.js",
+    "build:server": "webpack --config webpack.server.config.js",
+    "build:client": "webpack --config webpack.client.config.js",
+    "build": "npm run build:server && npm run build:client",
     "client": "http-server -c-1 -p 8080",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -20,13 +23,29 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@colyseus/monitor": "^0.15.0",
+    "@colyseus/schema": "^2.0.25",
     "canvas": "^3.1.0",
+    "colyseus": "^0.15.13",
+    "colyseus.js": "^0.15.14",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "socket.io": "^4.7.2",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "webpack": "^5.90.3",
+    "webpack-cli": "^5.1.4",
+    "webpack-node-externals": "^3.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.24.0",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-decorators": "^7.24.0",
+    "@babel/preset-env": "^7.24.0",
+    "babel-loader": "^9.1.3",
+    "css-loader": "^6.10.0",
+    "file-loader": "^6.2.0",
     "http-server": "^14.1.1",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "style-loader": "^3.3.4"
   }
 }
