--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "massive-rts",
   "version": "0.1.0",
   "description": "A browser-based RTS game with massively multiplayer capabilities",
-  "main": "server/index.js",
+  "main": "dist/server.bundle.js",
   "scripts": {
     "start": "node dist/server.bundle.js",
     "dev": "nodemon dist/server.bundle.js",
-    "build:server": "webpack --config webpack.server.config.js",
-    "build:client": "webpack --config webpack.client.config.js",
+    "build:server": "node ./node_modules/.bin/webpack --config webpack.server.config.js",
+    "build:client": "node ./node_modules/.bin/webpack --config webpack.client.config.js",
     "build": "npm run build:server && npm run build:client",
-    "client": "http-server -c-1 -p 8080",
+    "postinstall": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -34,18 +34,20 @@
     "uuid": "^9.0.1",
     "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4",
-    "webpack-node-externals": "^3.0.0"
-  },
-  "devDependencies": {
+    "webpack-node-externals": "^3.0.0",
     "@babel/core": "^7.24.0",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-proposal-decorators": "^7.24.0",
+    "@babel/plugin-transform-private-methods": "^7.22.5",
+    "@babel/plugin-transform-private-property-in-object": "^7.22.11", 
     "@babel/preset-env": "^7.24.0",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.10.0",
     "file-loader": "^6.2.0",
-    "http-server": "^14.1.1",
-    "nodemon": "^3.0.1",
     "style-loader": "^3.3.4"
+  },
+  "devDependencies": {
+    "http-server": "^14.1.1",
+    "nodemon": "^3.0.1"
   }
 }
