--- a/package.json
+++ b/package.json
@@ -24,28 +24,29 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@colyseus/monitor": "^0.15.0",
-    "@colyseus/schema": "^2.0.25",
-    "canvas": "^3.1.0",
-    "colyseus": "^0.15.13",
-    "colyseus.js": "^0.15.14",
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "socket.io": "^4.7.2",
-    "uuid": "^9.0.1",
-    "webpack": "^5.90.3",
-    "webpack-cli": "^5.1.4",
-    "webpack-node-externals": "^3.0.0",
+    "@agentdeskai/browser-tools-mcp": "1.1.0",
     "@babel/core": "^7.24.0",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-proposal-decorators": "^7.24.0",
     "@babel/plugin-transform-private-methods": "^7.22.5",
-    "@babel/plugin-transform-private-property-in-object": "^7.22.11", 
+    "@babel/plugin-transform-private-property-in-object": "^7.22.11",
     "@babel/preset-env": "^7.24.0",
+    "@colyseus/monitor": "^0.15.0",
+    "@colyseus/schema": "^2.0.25",
     "babel-loader": "^9.1.3",
+    "canvas": "^3.1.0",
+    "colyseus": "^0.15.13",
+    "colyseus.js": "^0.15.14",
+    "cors": "^2.8.5",
     "css-loader": "^6.10.0",
+    "express": "^4.18.2",
     "file-loader": "^6.2.0",
-    "style-loader": "^3.3.4"
+    "socket.io": "^4.7.2",
+    "style-loader": "^3.3.4",
+    "uuid": "^9.0.1",
+    "webpack": "^5.90.3",
+    "webpack-cli": "^5.1.4",
+    "webpack-node-externals": "^3.0.0"
   },
   "devDependencies": {
     "http-server": "^14.1.1",
